--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
 body {
 	margin: 0;
 }
+#display-container {
+	margin: 0 !important;
+	padding: 0 !important;
+	background: black;
+}
+
+@keyframes fade-in-out {
+  0%, 100% { opacity: 0; }
+  20%, 80% { opacity: 1; }
+}
+img.fade-in-out {
+  animation: fade-in-out 38s linear infinite;
+}
